# flet-dropzone

./: README.md  pyproject.toml
examples/dropzone_example/: pyproject.toml
examples/dropzone_example/src/: main.py
examples/flet_dropzone_example/: pyproject.toml
examples/flet_dropzone_example/src/: main.py
src/dropzone/: __init__.py  dropzone.py
src/flet_dropzone/: __init__.py  flet_dropzone.py
src/flutter/dropzone/: README.md  pubspec.yaml
src/flutter/dropzone/lib/: dropzone.dart
src/flutter/dropzone/lib/src/: create_control.dart  dropzone.dart
src/flutter/flet_dropzone/: CHANGELOG.md  README.md  pubspec.yaml
src/flutter/flet_dropzone/lib/: flet_dropzone.dart
src/flutter/flet_dropzone/lib/src/: create_control.dart  flet_dropzone.dart
